--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,15 +37,14 @@ runtime-benchmarks = [
 
 [dependencies]
 # crates.io
-array-bytes  = { version = "2.0" }
-async-trait  = { version = "0.1" }
-clap         = { version = "3.1", features = ["derive"] }
-codec        = { package = "parity-scale-codec", version = "3.1" }
-futures      = { version = "0.3" }
-jsonrpc-core = { version = "18.0" }
-log          = { version = "0.4" }
-serde        = { version = "1.0", features = ["derive"] }
-tempfile     = { version = "3.2" }
+array-bytes = { version = "2.0" }
+async-trait = { version = "0.1" }
+clap        = { version = "3.1", features = ["derive"] }
+codec       = { package = "parity-scale-codec", version = "3.1" }
+futures     = { version = "0.3" }
+log         = { version = "0.4" }
+serde       = { version = "1.0", features = ["derive"] }
+tempfile    = { version = "3.3" }
 
 # parachain
 crab-parachain-runtime     = { path = "runtime/crab-parachain" }
@@ -55,61 +54,62 @@ dc-rpc                     = { path = "rpc" }
 pangolin-parachain-runtime = { path = "runtime/pangolin-parachain" }
 
 # substrate
-frame-benchmarking             = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-frame-benchmarking-cli         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-basic-authorship            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-chain-spec                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-cli                         = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-client-api                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-consensus                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-executor                    = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-network                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-service                     = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-telemetry                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-tracing                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sc-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-api                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-block-builder               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-consensus                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-consensus-aura              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-core                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-inherents                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-io                          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-offchain                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-runtime                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-session                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-timestamp                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-sp-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-substrate-prometheus-endpoint  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-try-runtime-cli                = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
+frame-benchmarking             = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+frame-benchmarking-cli         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-basic-authorship            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-chain-spec                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-cli                         = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-client-api                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-consensus                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-executor                    = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-network                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-service                     = { features = ["wasmtime"], git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-sysinfo                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-telemetry                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-tracing                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sc-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-api                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-block-builder               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-consensus                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-consensus-aura              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-core                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-inherents                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-io                          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-offchain                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-runtime                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-session                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-timestamp                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+sp-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+substrate-prometheus-endpoint  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+try-runtime-cli                = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
 
 # cumulus
-cumulus-client-cli                      = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
-cumulus-client-consensus-aura           = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
-cumulus-client-consensus-common         = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
-cumulus-client-consensus-relay-chain    = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
-cumulus-client-network                  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
-cumulus-client-service                  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
-cumulus-primitives-core                 = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
-cumulus-primitives-parachain-inherent   = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
-cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
-cumulus-relay-chain-interface           = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
-cumulus-relay-chain-rpc-interface       = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
+cumulus-client-cli                      = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
+cumulus-client-consensus-aura           = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
+cumulus-client-consensus-common         = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
+cumulus-client-consensus-relay-chain    = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
+cumulus-client-network                  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
+cumulus-client-service                  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
+cumulus-primitives-core                 = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
+cumulus-primitives-parachain-inherent   = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
+cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
+cumulus-relay-chain-interface           = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
+cumulus-relay-chain-rpc-interface       = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
 
 # polkadot
-polkadot-cli       = { features = ["rococo-native"], git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
-polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
-polkadot-service   = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
-xcm                = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
+polkadot-cli       = { features = ["rococo-native"], git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }
+polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }
+polkadot-service   = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }
+xcm                = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }
 
 [build-dependencies]
-substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
-try-runtime-cli              = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
+substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
+try-runtime-cli              = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
 
 [workspace]
 members = [
