--- a/runtime/crab-parachain/Cargo.toml
+++ b/runtime/crab-parachain/Cargo.toml
@@ -12,7 +12,7 @@ version     = "5.3.0"
 
 [dependencies]
 # crates.io
-array-bytes = { version = "2.0", optional = true }
+array-bytes = { version = "2.0" }
 codec       = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
 scale-info  = { version = "2.1", default-features = false, features = ["derive"] }
 smallvec    = { version = "1.8" }
@@ -153,8 +153,6 @@ std = [
 ]
 
 runtime-benchmarks = [
-	# crates.io
-	"array-bytes",
 	# cumulus
 	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
 	# polkadot
